wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      volumes:
        - name: wp-persistent-storage
          persistentVolumeClaim:
            claimName: wp-pvc
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: wp-persistent-storage
              mountPath: /var/www/html
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
