ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: wordpress.jums
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sql-service
                port:
                  number: 3306
